# visual_tracking

./: Black.lut  Black1.lut  Black_BonnField.lut  CMakeLists.txt  Objects.lut  Objects_BonnField.lut  README.md  White.lut  White_BonnField.lut  package.xml  reachableComp  reachableComp1  readme.txt  readme.txt~
config/: Default.perspective  cCFile.yml  config_xs4_yf.yaml  config_xs4_yf_bonnfield.yaml  config_xs4_yf_bonnfield1.yaml  config_xs4_yf_bonnfield1_1.yaml  config_xs4_yf_bonnfield1_2.yaml  config_xs4_yf_bonnfield1_3.yaml  config_xs4_yf_bonnfield1_4.yaml  config_xs4_yf_bonnfield2.yaml  config_xs4_yf_bonnfield2_1.yaml  config_xs4_yf_bonnfield2_2.yaml  config_xs4_yf_bonnfield2_3.yaml  config_xs4_yf_bonnfield2_4.yaml  config_xs4_yf_bonnfield3.yaml  config_xs4_yf_bonnfield3_1.yaml  config_xs4_yf_bonnfield4.yaml  vision.rviz
include/visual_tracking/: frameGrabber.h  vision_main.h
include/visual_tracking/CalculatePose/: calculatePose.h  hillClimbing.h  kalmanFilter.h  lostTrackRecover.h
include/visual_tracking/DataAssociation/: dataAssociation.h
include/visual_tracking/FieldObjects/: findField.h  findGoalPosts.h  findObstacle.h  findWhiteObject.h
include/visual_tracking/IcpPointMatcher/: icp.h  pointMatcher.h
include/visual_tracking/LineMatcher/: findLines.h  findNodes.h  lineMatcher.h
include/visual_tracking/Parameters/: Parameters.h  camera_parameters.h  globaldefinitions.h
include/visual_tracking/ParticleFilter/: ParticleFilter.h  PclClustering.h  singleParticle.h
include/visual_tracking/Projection/: BackwardProjection.h  DistortionModel.h  ForwardProjection.h
include/visual_tracking/Tools/: VisionRate.h  m_Math.h  tools.h
include/visual_tracking/camera/: Camera.h  CameraDummy.h  ICamera.h  MatPublisher.h
include/visual_tracking/rgb_yuyv/: rgb2yuyv.h  yuv2rgb.h  yuvClasses.h
launch/: .visual_tracking.launch.kate-swp  1_NormalTest_1.launch  1_NormalTest_1.launch~  1_NormalTest_2.launch  1_NormalTest_3.launch  1_NormalTest_4.launch  1_easyTest_1.launch  1_easyTest_2.launch  1_easyTest_3.launch  1_easyTest_4.launch  1_easyTest_5.launch  2_DifficultTest_1.launch  2_DifficultTest_2.launch  2_DifficultTest_3.launch  2_DifficultTest_4.launch  2_hardTest_1.launch  2_hardTest_2.launch  2_hardTest_3.launch  2_hardTest_4.launch  2_hardTest_5.launch  3_comparision.launch  4_extract_images.launch  bgr2yuyv.launch  play_bagfile.launch  projectWorld2Img.launch  record.launch  recordnew.launch  start_camera.launch  visual_tracking.launch  visual_tracking_BonnField.launch  visual_tracking_BonnField1.launch  visual_tracking_BonnField_bag_11.20_17_config4.launch  visual_tracking_BonnField_bag_12.04_04_config3.launch  visual_tracking_BonnField_bag_12.04_06_config2.launch  visual_tracking_BonnField_bag_newBag.launch
src/: icp_simple.cpp~  vision_main.cpp
src/CalculatePose/: calculatePose.cpp  hillClimbing.cpp  kalmanFilter.cpp  lostTrackRecover.cpp
src/DataAssociation/: dataAssociation.cpp
src/FieldObjects/: findField.cpp  findGoalPosts.cpp
src/IcpPointMatcher/: demo.cpp  icp.cpp  icpPointToPlane.cpp  icpPointToPoint.cpp  kdtree.cpp  matrix.cpp
src/LineMatcher/: .findLines.cpp.kate-swp  findLines.cpp  findNodes.cpp  lineMatcher.cpp
src/Parameters/: Parameters.cpp  camera_parameters.cpp
src/ParticleFilter/: ParticleFilter.cpp  PclClustering.cpp  singleParticle.cpp
src/Projection/: BackwardProjection.cpp  DistortionModel.cpp  ForwardProjection.cpp
src/Tools/: VisionRate.cpp  m_Math.cpp  tools.cpp
src/camera/: Camera.cpp  CameraDummy.cpp  MatPublisher.cpp  my_cam.cpp
src/rgb_yuyv/: rgb2yuyv.cpp  yuvClasses.cpp
tmp_file/: .~lock.error1.ods#  .~lock.some factors that may influence the confidence of the output.ods#
