<?xml version="1.0"?>
<package>
	<name>visual_tracking</name>
	<version>0.0.0</version>
	<description>NimbRo-OP computer vision</description>

	<maintainer email="yongfeng.zhong@uni-bonn.de">Yongfeng Zhong</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>nodelet</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>field_model</build_depend>
	<build_depend>config_server</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>eigen_conversions</build_depend>
	<build_depend>pcl_ros</build_depend>
	 <build_depend>libpcl-all-dev</build_depend>
	<!--build_depend>pcl</build_depend-->

	
	<run_depend>nodelet</run_depend>	
	<run_depend>roscpp</run_depend>
	<run_depend>field_model</run_depend>
	<run_depend>config_server</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>eigen_conversions</run_depend>
	<run_depend>libpcl-all</run_depend>
        <!--run_depend>libpointmatcher</run_depend-->
	
	<!--export>
		<nodelet plugin="${prefix}/plugin_nodelet.xml" />
	</export-->
</package>
